--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,9 @@
     <title>Cleansweep</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <button id="reset">Reset</button>
+    </div>
     <script type="module" src="/main.js"></script>
     <script type="module" src="/Cleansweep.js"></script>
   </body>
