--- a/web/index.html
+++ b/web/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Cleansweep</title>
   </head>
   <body>
     <div id="app">
+      <canvas id="canvas"></canvas>
       <button id="reset">Reset</button>
     </div>
     <script type="module" src="/main.js"></script>
