--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/logo-favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Cleansweep</title>
+    <title>Project Sienna</title>
   </head>
   <body>
     <div id="app">
@@ -13,6 +13,6 @@
       <button id="reset">Reset</button>
     </div>
     <script type="module" src="/main.js"></script>
-    <script type="module" src="/Cleansweep.js"></script>
+    <script type="module" src="/ProjectSienna.js"></script>
   </body>
 </html>
