--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
     <div id="app">
       <canvas id="canvas"></canvas>
       <button id="reset">Reset</button>
+      <div id="tweak-pane"></div>
       <p id="version">v</p>
     </div>
     <script type="module" src="/main.js"></script>
