--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,9 @@
     <div id="app">
       <canvas id="canvas"></canvas>
       <div id="tweak-pane"></div>
-      <p id="version">v</p>
+      <div class="version-container">
+        ProjectSienna - <span id="version">v</span>
+      </div>
     </div>
     <script type="module" src="/main.js"></script>
     <script type="module" src="/ProjectSienna.js"></script>
