--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
     <div id="app">
       <canvas id="canvas"></canvas>
       <div id="tweak-pane"></div>
+      <div id="tweak-pane-controls"></div>
       <div class="version-container">
         ProjectSienna - <span id="version">v</span>
       </div>
