--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="app">
       <canvas id="canvas"></canvas>
-      <div id="tweak-pane"></div>
+      <div id="tweak-pane-params"></div>
       <div id="tweak-pane-controls"></div>
       <div class="version-container">
         ProjectSienna - <span id="version">v</span>
