fix: fix id names for panes

--- a/web/index.html
+++ b/web/index.html
@@ -10,8 +10,8 @@
   <body>
     <div id="app">
       <canvas id="canvas"></canvas>
-      <div id="tweak-pane-params"></div>
-      <div id="tweak-pane-controls"></div>
+      <div class="tweakpane" id="tweakpane-params"></div>
+      <div class="tweakpane" id="tweakpane-controls"></div>
       <div class="version-container">
         ProjectSienna - <span id="version">v</span>
       </div>
