feat: add github link to web page

--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,12 @@
       <div class="tweakpane" id="tweakpane-params"></div>
       <div class="tweakpane" id="tweakpane-controls"></div>
       <div class="version-container">
-        ProjectSienna - <span id="version">v</span>
+        <div>
+          <a href="https://github.com/ColorOfLight/project-sienna" target="_blank">Github</a>
+        </div>
+        <div>
+          ProjectSienna - <span id="version">v</span>
+        </div>
       </div>
     </div>
     <script type="module" src="/main.js"></script>
