--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
         </div>
       </div>
     </div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/main.ts"></script>
     <script type="module" src="/ProjectSienna.js"></script>
   </body>
 </html>
