feat: implement mobile-warning-popup UI

--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,19 @@
           ProjectSienna - <span id="version">v</span>
         </div>
       </div>
+      <div id="mobile-warning-popup" class="display-none">
+        <div class="popup-container">
+          <p>
+            This project is not optimized for mobile devices.
+          </p>
+          <p>
+            Please use a desktop browser with a keyboard.
+          </p>
+          <div class="popup-button-container">
+            <button>I don't care</button>
+          </div>
+        </div>
+      </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
     <script type="module" src="/ProjectSienna.js"></script>
