feat: add script for mobile popup

--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
             Please use a desktop browser with a keyboard.
           </p>
           <div class="popup-button-container">
-            <button>I don't care</button>
+            <button id="mobile-warning-popup-close">I don't care</button>
           </div>
         </div>
       </div>
