feat: implement initial-info-popup UI

--- a/web/index.html
+++ b/web/index.html
@@ -20,6 +20,17 @@
           ProjectSienna - <span id="version">v</span>
         </div>
       </div>
+      <div id="initial-info-popup">
+        <div class="popup-container">
+          <p>
+        Paint an object with click & drag.
+          </p>
+          <div class="popup-button-container">
+        <button id="initial-info-popup-close">Got it!</button>
+          </div>
+          <div class="popup-arrow-up"></div>
+        </div>
+      </div>
       <div id="mobile-warning-popup" class="display-none">
         <div class="popup-container">
           <p>
