fix: reverse logic with display-none to prevent popping out the popup

--- a/web/index.html
+++ b/web/index.html
@@ -20,7 +20,7 @@
           ProjectSienna - <span id="version">v</span>
         </div>
       </div>
-      <div id="initial-info-popup">
+      <div id="initial-info-popup" class="display-none">
         <div class="popup-container">
           <p>
         Paint an object with click & drag.
